fix: height page on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 html, body{
     height: auto;
-    min-height: 100%;
+    min-height: 100vh;
     width: 100%;
 }
 
